[tool.poetry]
name = "aula-09-04"
version = "0.1.0"
description = ""
authors = ["Mario Henrique Adaniya <mhadaniya@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
streamlit = "^0.57.3"
matplotlib = "^3.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
